force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/cgcloud__Promotion_Template_Tactic_Template__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Promotion Templates and Tactic Templates</description>
    <label>Promotion Template Tactic Template</label>
    <nameField>
        <displayFormat>PTTT-{0000}</displayFormat>
        <label>Promotion Template Tactic Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Templates Tactic Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>