force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Determines the display order of the tactic template while adding a tactic to a promotion. By default, ‌tactic templates are shown in ascending order. Make sure that you enter a value that’s unique within the promotion template.</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>