force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/fields/cgcloud__Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Template__c</fullName>
    <description>Link to the Tactic Template</description>
    <label>Tactic Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Tactic_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Tactic_Template__c</referenceTo>
    <relationshipLabel>Promotion Templates</relationshipLabel>
    <relationshipName>Promotion_Template_Tactic_Templates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>