force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/fields/cgcloud__TPO_UP_Provides_Discount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TPO_UP_Provides_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if a Tactic created from the referenced Template provides Discount through the TPO Discount field.</description>
    <inlineHelpText>Specifies if a Tactic created from the referenced Template provides Discount through the TPO Discount field.</inlineHelpText>
    <label>TPO UP Provides Discount</label>
    <type>Checkbox</type>
</CustomField>