force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/fields/cgcloud__TPO_UP_Tactic_Type_Mapping__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TPO_UP_Tactic_Type_Mapping__c</fullName>
    <description>Specifies which Tactic Slot the related Tactic Type will use on Prediction API calls.</description>
    <inlineHelpText>Specifies which Tactic Slot the related Tactic Type will use on Prediction API calls.</inlineHelpText>
    <label>TPO UP Tactic Type Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tactic1</fullName>
                <default>true</default>
                <label>Tactic1</label>
            </value>
            <value>
                <fullName>Tactic2</fullName>
            </value>
            <value>
                <fullName>Tactic3</fullName>
            </value>
            <value>
                <fullName>Tactic4</fullName>
            </value>
            <value>
                <fullName>Tactic5</fullName>
            </value>
            <value>
                <fullName>Tactic6</fullName>
            </value>
            <value>
                <fullName>Tactic7</fullName>
            </value>
            <value>
                <fullName>Tactic8</fullName>
            </value>
            <value>
                <fullName>Tactic9</fullName>
            </value>
            <value>
                <fullName>Tactic10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>