force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/fields/cgcloud__Unique_Transfer_Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Transfer_Record_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Transfer Record Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>