force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/validationRules/cgcloud__Sales_Org_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch</fullName>
    <active>true</active>
    <description>The Promotion Template and the Tactic Template must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Tactic_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Promotion_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Promotion Template and the Tactic Template must have the same Sales Org.</errorMessage>
</ValidationRule>