force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/validationRules/cgcloud__Validate_Sort_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Sort_Value</fullName>
    <active>true</active>
    <description>Ensures that you enter a whole number in the Sort field.</description>
    <errorConditionFormula>OR(FLOOR(cgcloud__Sort__c) &lt;&gt; CEILING(cgcloud__Sort__c), cgcloud__Sort__c&lt;0)</errorConditionFormula>
    <errorDisplayField>cgcloud__Sort__c</errorDisplayField>
    <errorMessage>Enter a whole number.</errorMessage>
</ValidationRule>