force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/validationRules/cgcloud__Validate_Tactic_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Tactic_Template</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(cgcloud__Is_Transfer_Relevant__c, &apos;Yes&apos;)  &amp;&amp;  cgcloud__Tactic_Template__r.cgcloud__Target_Tactic_Template__c   =  null</errorConditionFormula>
    <errorMessage>You can&apos;t change Is Transfer Relevant to Yes because a target tactic template isn&apos;t defined for the tactic template.</errorMessage>
</ValidationRule>