force-app/main/default/objects/cgcloud__Promotion_Template_Tactic_Template__c/validationRules/cgcloud__Validating_Transfer_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validating_Transfer_Sales_Org</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(TEXT(cgcloud__Promotion_Template__r.cgcloud__Transfer_Sales_Org__c )))  &amp;&amp;   NOT(ISBLANK( TEXT(cgcloud__Tactic_Template__r.cgcloud__Target_Tactic_Template__r.cgcloud__Sales_Org__c))) &amp;&amp; NOT(ISBLANK(TEXT(cgcloud__Is_Transfer_Relevant__c)))&amp;&amp;  TEXT(cgcloud__Is_Transfer_Relevant__c)=&apos;YES&apos; &amp;&amp; (TEXT(cgcloud__Promotion_Template__r.cgcloud__Transfer_Sales_Org__c)) &lt;&gt; TEXT(cgcloud__Tactic_Template__r.cgcloud__Target_Tactic_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>Ensure that the target sales org matches the sales org of the target promotion template tactic template</errorMessage>
</ValidationRule>